V3 - add AgreementId to response